--- a/index.html
+++ b/index.html
@@ -105,6 +105,30 @@ function mostrar(id) {
     }
 }
 </script>    
+
+    
+    <h2>📄 Certificados y Títulos</h2>
+
+<ul>
+  <li>
+    <a href="https://drive.google.com/file/d/1Yn7067qNkuRZlxFlho45iPgwgYgWAcwa/view?usp=drive_link" target="_blank">
+      📜 Diplomado en Educación
+    </a>
+  </li>
+
+  <li>
+    <a href="https://drive.google.com/file/d/1kVHryqwEXQeI5MwGkqS410urhpRnFNZr/view?usp=sharing" target="_blank">
+      📜 Diplomado en Tecnología Educativa
+    </a>
+  </li>
+
+  <li>
+    <a href="https://drive.google.com/file/d/1XUHQTB1qGnuvlyPTqCYjnvNu2UOhVXOZ/view?usp=drive_link" target="_blank">
+      🎓 Título Profesional
+    </a>
+  </li>
+</ul>
+
     
 </body>
 </html>
