--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ function mostrar(id) {
 
 <ul>
   <li>
-    <a href="https://drive.google.com/file/d/1Yn7067qNkuRZlxFlho45iPgwgYgWAcwa/view?usp=drive_link" target="_blank">
+    <a href="hhttps://drive.google.com/file/d/1Yn7067qNkuRZlxFlho45iPgwgYgWAcwa/view?usp=drive_link" target="_blank">
       📜 Diplomado en Educación
     </a>
   </li>
