--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 <p>
   <a href="#" onclick="mostrar('certificado1')">
-    📜 Diplomado en Educación
+    📜 Diplomado en Educación 11
   </a>
 </p>
 
@@ -83,7 +83,7 @@
 
 <p>
   <a href="#" onclick="mostrar('certificado2')">
-    📜 Diplomado en Tecnología Educativa
+    📜 Diplomado en Tecnología Educativa 22
   </a>
 </p>
 
@@ -93,19 +93,19 @@
 <ul>
   <li>
     <a href="hhttps://drive.google.com/file/d/1Yn7067qNkuRZlxFlho45iPgwgYgWAcwa/view?usp=drive_link" target="_blank">
-      📜 Diplomado en Educación
+      📜 Diplomado en Educación  33
     </a>
   </li>
 
   <li>
     <a href="https://drive.google.com/file/d/1kVHryqwEXQeI5MwGkqS410urhpRnFNZr/view?usp=sharing" target="_blank">
-      📜 Diplomado en Tecnología Educativa
+      📜 Diplomado en Tecnología Educativa2 44
     </a>
   </li>
 
   <li>
     <a href="https://drive.google.com/file/d/1XUHQTB1qGnuvlyPTqCYjnvNu2UOhVXOZ/view?usp=drive_link" target="_blank">
-      🎓 Título Profesional
+      🎓 Título Profesional 55
     </a>
   </li>
 </ul>
