--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <ul>
   <li>
-    <a href="hhttps://drive.google.com/file/d/1Yn7067qNkuRZlxFlho45iPgwgYgWAcwa/view?usp=drive_link" target="_blank">
+    <a href="https://drive.google.com/file/d/1kVHryqwEXQeI5MwGkqS410urhpRnFNZr/view?usp=drive_link" target="_blank">
       📜 Diplomado en Educación  33
     </a>
   </li>
