--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ footer {
         <div class="lista-certificados">
             <ul>
                 <li onclick="verDocumento('https://drive.google.com/file/d/1kVHryqwEXQeI5MwGkqS410urhpRnFNZr/preview')">
-                    📜 Diplomado en Educación
+                    📜 Diplomado en Educación 22
                 </li>
 
                 <li onclick="verDocumento('https://drive.google.com/file/d/ID_DIPLOMADO_2/preview')">
