--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ footer {
 
     <h2>🧑‍🏫 Experiencia Laboral</h2>
     <ul>
-        <li>Docente de Matemática – Nivel Secundaria Comunitaria Productiva/li>
-        <li>Docente de la carrera de Informatica – Universidad Santo Tomas de Aquino</li>
+        <li>Docente de Matemática – Nivel Secundaria Comunitaria Productiva </li>
+        <li>Docente de la carrera de Informatica – Universidad Santo Tomas de Aquino </li>
         <li>Docente de Diplomados – Universidad Pedagógica de Bolivia</li>
     </ul>
 
@@ -134,6 +134,7 @@ footer {
         </div>
 
         <div class="vista-certificado">
+            <p class="mensaje">👈 Seleccione un documento</p>
             <iframe id="visor" src=""></iframe>
         </div>
 
@@ -168,6 +169,7 @@ footer {
         </div>
 
         <div class="vista-certificado">
+            <p class="mensaje">👈 Seleccione un documento</p>
             <iframe id="visor1" src=""></iframe>
         </div>
 
