--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@ footer {
 <div class="container">
 
     <div class="header">
-        <img src="https://drive.google.com/uc?id=ID_DE_TU_FOTO" class="foto">
+        <img src="https://drive.google.com/uc?id=1PThtm0d9ptwQ314in7SYd_TaOIDGXkoR" class="foto">
+            
+        
         <h1>Juan Carlos Arteaga Flores</h1>
         <p>Docente | Matemática | Ingeniero de Sistemas  | Electrónica | Ingles </p>
     </div>
