--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@ footer {
 
     <div class="header">
         
-          <img src="https://drive.google.com/uc?export=view&id=1PThtm0d9ptwQ314in7SYd_TaOIDGXkoR" class="foto">  
-        
+          <img src="https://drive.google.com/uc?id=ID_DE_TU_FOTO" class="foto">
         <h1>Juan Carlos Arteaga Flores</h1>
         <p>Docente | Matemática | Ingeniero de Sistemas  | Electrónica | Ingles </p>
     </div>
