--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ footer {
 
     <div class="header">
         
-          <img src="https://drive.google.com/uc?id=ID_DE_TU_FOTO" class="foto">
+          <img src="foto.jpg" class="foto">
         <h1>Juan Carlos Arteaga Flores</h1>
         <p>Docente | Matemática | Ingeniero de Sistemas  | Electrónica | Ingles </p>
     </div>
