--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ footer {
         </div>
 
         <div class="vista-certificado">
-            <p class="mensaje">👈 Seleccione un documento</p>
+            <p class="mensaje">👈 Haga Clic</p>
             <iframe id="visor1" src=""></iframe>
         </div>
 
