--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ footer {
         <li>Docente de Diplomados – Universidad Pedagógica de Bolivia</li>
     </ul>
 
-    <h2>📄 Títulos y Certificados</h2>
+    <h2>📄 Títulos y Certificados <h3>📄 Títulos y Certificados</h3>  </h2>
 
     <div class="certificados-container">
 
@@ -136,7 +136,6 @@ footer {
         </div>
 
         <div class="vista-certificado">
-            <p class="mensaje">👈 Seleccione un documento</p>
             <iframe id="visor" src=""></iframe>
         </div>
 
@@ -171,7 +170,6 @@ footer {
         </div>
 
         <div class="vista-certificado">
-            <p class="mensaje">👈 Haga Clic</p>
             <iframe id="visor1" src=""></iframe>
         </div>
 
