--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ footer {
 
 
     
-<h2>📄 Estudios de Postgrado</h2>
+<h2>📄 Estudios de Postgrado</h2>  <h3>📄 hacer clic en la lista de la derecha</h3>
 
     <div class="certificados-container">
 
