--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ footer {
         <li>Docente de Diplomados – Universidad Pedagógica de Bolivia</li>
     </ul>
 
-    <h2>📄 Títulos y Certificados <h3>📄 Títulos y Certificados</h3>  </h2>
-
+    <h2>📄 Títulos y Certificados </h2>  
+    <h4>Para ver dar clic en la lista de abajo</h4>
     <div class="certificados-container">
 
         <div class="lista-certificados">
@@ -143,7 +143,8 @@ footer {
 
 
     
-<h2>📄 Estudios de Postgrado</h2>  <h3>📄 hacer clic en la lista de la derecha</h3>
+<h2>📄 Estudios de Postgrado</h2>  
+    <h4>Para ver dar clic en la lista de abajo</h4>
 
     <div class="certificados-container">
 
