--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ footer {
     </ul>
 
     <h2>📄 Títulos y Certificados </h2>  
-    <h4>Para ver dar clic en la lista de abajo</h4>
+    <h4>Para ver dar clic en la lista de abajo<  👇/h4>
     <div class="certificados-container">
 
         <div class="lista-certificados">
@@ -144,7 +144,7 @@ footer {
 
     
 <h2>📄 Estudios de Postgrado</h2>  
-    <h4>Para ver dar clic en la lista de abajo</h4>
+    <h4>Para ver dar clic en la lista de abajo<  👇/h4>
 
     <div class="certificados-container">
 
