--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@ footer {
                 <li onclick="verDocumento('https://drive.google.com/file/d/1kVHryqwEXQeI5MwGkqS410urhpRnFNZr/preview')">
                     🎓 Certificado “Programador en Aplicaciones”. 
                 </li>
+                  <li onclick="verDocumento('https://drive.google.com/file/d/1FKljn8PwOJqxwzY2lLGTWimXt6oz_7SJ/preview')">
+                    🎓 Certificado "Analista de Sistemas"
+                </li>
                 <li onclick="verDocumento('https://drive.google.com/file/d/1z49ilkO5PZ4nsZtnSPvywvaSaZCWumrO/preview')">
                     🎓 Certificado de “Técnico en electrónica Digital”. 
                 </li>
@@ -129,8 +132,8 @@ footer {
                 <li onclick="verDocumento('https://drive.google.com/file/d/1VBi0Dbbks9vv8xjPDqvxRCIQOIb4ViC4/preview')">
                     🎓 Título en Provisión Nacional como "Licenciado en Matemática" 
                 </li>
-                <li onclick="verDocumento('https://drive.google.com/file/d/ID_TITULO/preview')">
-                    🎓 Título Profesional
+                  <li onclick="verDocumento('https://drive.google.com/file/d/1PDUq0cVES2FfwWo9TSwVQkA81O3Qpxtv/preview')">
+                    🎓 Título de Técnico Medio en Ingles
                 </li>
             </ul>
         </div>
@@ -150,18 +153,18 @@ footer {
 
         <div class="lista-certificados">
             <ul>
-                <li onclick="verDocumento1('https://drive.google.com/file/d/1ADOvdxOnKS-5GTdMhRAAq8emJ3U9MUu6/preview')">
-                    🎓 Título de Bachiller en Humanidades
+                <li onclick="verDocumento1('https://drive.google.com/file/d/1yDFSpX4qRtthGQU3tfeLr9FcZHShhi4l/preview')">
+                    🎓 Diplomado en "Oraganización y Administración del Aula en Educación Superior"
                 </li>
-                <li onclick="verDocumento1('https://drive.google.com/file/d/1kVHryqwEXQeI5MwGkqS410urhpRnFNZr/preview')">
-                    🎓 Certificado “Programador en Aplicaciones”. 
+                <li onclick="verDocumento1('https://drive.google.com/file/d/1MJkzSm56L_9dVfpPpsgOdDpDWjIewhLV/preview')">
+                    🎓 Diplomado en "Investigación Educativa y Producción de Conocimiento”. 
                 </li>
-                <li onclick="verDocumento1('https://drive.google.com/file/d/1z49ilkO5PZ4nsZtnSPvywvaSaZCWumrO/preview')">
-                    🎓 Certificado de “Técnico en electrónica Digital”. 
+                <li onclick="verDocumento1('https://drive.google.com/file/d/1FpuizjI-W9IgaBwGX5uzwra_s6m4xAp3/preview')">
+                    🎓 Diplomado en "Plataformas Virtuales y Herramientas Tecnológicas para Procesos Pedaqgógicos"
                 </li>
                
-                <li onclick="verDocumento1('https://drive.google.com/file/d/1kVHryqwEXQeI5MwGkqS410urhpRnFNZr/preview')">
-                    📜 Diplomado en Tecnología Educativa
+                <li onclick="verDocumento1('https://drive.google.com/file/d/1zl0w9csCcxGhqZefzFp6w8_3Vm4UwGIj/preview')">
+                    📜 Maestría en Matemática
                 </li>
 
                 <li onclick="verDocumento1('https://drive.google.com/file/d/ID_TITULO/preview')">
