--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Currículum Vitae - Juan Carlos Arteaga Flores</title>
     
 <style>
-body {
+body {    
     font-family: Arial, sans-serif;
     background: #f4f4f4;
     margin: 0;
@@ -103,9 +103,9 @@ footer {
 
     <h2>🧑‍🏫 Experiencia Laboral</h2>
     <ul>
-        <li>Docente de Matemática – Nivel Secundaria Comunitaria Productiva </li>
-        <li>Docente de la carrera de Informatica – Universidad Santo Tomas de Aquino </li>
-        <li>Docente de Diplomados – Universidad Pedagógica de Bolivia</li>
+        <li>Docente de Matemática en el Nivel Secundaria Comunitaria Productiva, con trayectoria en reconocidas instituciones educativas del ámbito público y privado.</li>
+        <li>Docente universitario de la Carrera de Informática en la Universidad Santo Tomás de Aquino.</li>
+        <li>Docente formador en la Universidad Pedagógica de Bolivia, facilitando diplomados dirigidos a docentes a nivel nacional.</li>
     </ul>
 
     <h2>📄 Títulos y Certificados </h2>  
