--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ footer {
 
     <h2>📌 Perfil Profesional</h2>
     <p>
-        Docente con experiencia en educación regular, especializado en Informatica
-        matemática (Normalista - Simón Bolivar) y formación de adultos.
+        Docente con sólida experiencia en educación regular y educación alternativa de personas 
+        jóvenes y adultas, especializado en Informática y Matemática, con formación normalista en la ESFM “Simón Bolívar”.
     </p>
 
     <h2>🧑‍🏫 Experiencia Laboral</h2>
