--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@ footer {
                     🎓 Título en Provisión Nacional como "Licenciado en Matemática" 
                 </li>
                   <li onclick="verDocumento2('https://drive.google.com/file/d/1PDUq0cVES2FfwWo9TSwVQkA81O3Qpxtv/preview')">
-                    🎓 Título de Técnico Medio en Ingles
+                    🎓 Título de Técnico Medio en Ingles $$
                 </li>
             </ul>
         </div>
 
-        <div class="vista-certificado">
+        <div class="vista-certificado2">
             <iframe id="visor2" src=""></iframe>
         </div>
 
