--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ footer {
             </ul>
         </div>
 
-        <div class="vista-certificado2">
+        <div class="vista-certificados">
             <iframe id="visor2" src=""></iframe>
         </div>
 
