--- a/index.html
+++ b/index.html
@@ -86,15 +86,13 @@ footer {
 
 <div class="container">
 
-    <div class="header">
-        
+    <div class="header"> 
           <img src="foto.jpg" class="foto">
         <h1>Juan Carlos Arteaga Flores</h1>
         <p>Docente | Matemática | Ingeniero de Sistemas  | Electrónica | Ingles </p>
     </div>
 
     <hr>
-
     <h2>📌 Perfil Profesional</h2>
     <p>
         Docente con sólida experiencia en educación regular y educación alternativa de personas 
@@ -111,7 +109,6 @@ footer {
     <h2>📄 Títulos y Certificados </h2>  
     <h4>Para ver dar clic en la lista de abajo 👇</h4>
     <div class="certificados-container">
-
         <div class="lista-certificados">
             <ul>
                 <li onclick="verDocumento('https://drive.google.com/file/d/1ADOvdxOnKS-5GTdMhRAAq8emJ3U9MUu6/preview')">
@@ -135,7 +132,7 @@ footer {
                   <li onclick="verDocumento('https://drive.google.com/file/d/1PDUq0cVES2FfwWo9TSwVQkA81O3Qpxtv/preview')">
                     🎓 Título de Técnico Medio en Ingles
                 </li>
-            </ul>
+             </ul>
         </div>
 
         <div class="vista-certificado">
@@ -150,7 +147,6 @@ footer {
     <h4>Para ver dar clic en la lista de abajo  👇</h4>
 
     <div class="certificados-container">
-
         <div class="lista-certificados">
             <ul>
                 <li onclick="verDocumento1('https://drive.google.com/file/d/1yDFSpX4qRtthGQU3tfeLr9FcZHShhi4l/preview')">
@@ -166,7 +162,7 @@ footer {
                     📜 Maestría en Matemática
                 </li>
             </ul>
-        </div>
+         </div>
 
         <div class="vista-certificado">
             <iframe id="visor1" src=""></iframe>
@@ -174,10 +170,9 @@ footer {
 
     </div>
  
-     <h2>📄 Títulos y Certificados </h2>  
+ <h2>📄 Títulos y Certificados </h2>  
     <h4>Para ver dar clic en la lista de abajo 👇</h4>
     <div class="certificados-container">
-
         <div class="lista-certificados">
             <ul>
                 <li onclick="verDocumento2('https://drive.google.com/file/d/1ADOvdxOnKS-5GTdMhRAAq8emJ3U9MUu6/preview')">
@@ -202,9 +197,9 @@ footer {
                     🎓 Título de Técnico Medio en Ingles $$
                 </li>
             </ul>
-        </div>
+         </div>
 
-        <div class="vista-certificados">
+        <div class="vista-certificado">
             <iframe id="visor2" src=""></iframe>
         </div>
 
