--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@ footer {
 <body>
 
 <div class="container">
-
     <div class="header"> 
           <img src="foto.jpg" class="foto">
         <h1>Juan Carlos Arteaga Flores</h1>
@@ -200,7 +199,7 @@ footer {
             <iframe id="visor2" src=""></iframe>
         </div>
 
-    </div>
+      </div>
 
 <!-- Este es un comentario en HTML -->
     
@@ -216,6 +215,18 @@ function verDocumento(url) {
 }
 function verDocumento1(url) {
     document.getElementById("visor1").src = url;
+}
+function verDocumento2(url) {
+    document.getElementById("visor2").src = url;
+}
+function verDocumento3(url) {
+    document.getElementById("visor3").src = url;
+}
+function verDocumento4(url) {
+    document.getElementById("visor4").src = url;
+}
+function verDocumento5(url) {
+    document.getElementById("visor5").src = url;
 }
 </script>
 
