--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ footer {
                 <li onclick="verDocumento2('https://drive.google.com/file/d/1j3wINUa-woVRWL1pm7COuJYLNA48RNq9/preview')">
                     🎓 Título de Bachiller en Humanidades
                 </li>
-                <li onclick="verDocumento2('https://drive.google.com/file/d/1kVHryqwEXQeI5MwGkqS410urhpRnFNZr/preview')">
+                <li onclick="verDocumento2('https://drive.google.com/file/d/1j3wINUa-woVRWL1pm7COuJYLNA48RNq9/preview')">
                     🎓 Certificado “Programador en Aplicaciones”. 
                 </li>
                   <li onclick="verDocumento2('https://drive.google.com/file/d/1FKljn8PwOJqxwzY2lLGTWimXt6oz_7SJ/preview')">
@@ -190,7 +190,7 @@ footer {
                     🎓 Título en Provisión Nacional como "Licenciado en Matemática" 
                 </li>
                   <li onclick="verDocumento2('https://drive.google.com/file/d/1PDUq0cVES2FfwWo9TSwVQkA81O3Qpxtv/preview')">
-                    🎓 Título de Técnico Medio en Ingles $$
+                    🎓 Título de Técnico Medio en Ingles $
                 </li>
             </ul>
          </div>
