--- a/index.html
+++ b/index.html
@@ -171,26 +171,26 @@ footer {
     <div class="certificados-container">
         <div class="lista-certificados">
             <ul>
-                <li onclick="verDocumento2('https://drive.google.com/file/d/1j3wINUa-woVRWL1pm7COuJYLNA48RNq9/preview')">
-                    🎓 Título de Bachiller en Humanidades
+                <li onclick="verDocumento2('https://drive.google.com/file/d/14LtHTJQU6RQg9Tgo0VhQ3TkR0x_KiCD8/preview')">
+                    📜 Cursos de Capacitación Docente y Matemática
                 </li>
                 <li onclick="verDocumento2('https://drive.google.com/file/d/1j3wINUa-woVRWL1pm7COuJYLNA48RNq9/preview')">
-                    🎓 Certificado “Programador en Aplicaciones”. 
+                    📜 Cursos relacionados con Informatica
                 </li>
                   <li onclick="verDocumento2('https://drive.google.com/file/d/1FKljn8PwOJqxwzY2lLGTWimXt6oz_7SJ/preview')">
-                    🎓 Certificado "Analista de Sistemas"
+                    📜 Cursos de Capacitación docente
                 </li>
                 <li onclick="verDocumento2('https://drive.google.com/file/d/1z49ilkO5PZ4nsZtnSPvywvaSaZCWumrO/preview')">
-                    🎓 Certificado de “Técnico en electrónica Digital”. 
+                    📜 Talleres Nacionales e Internacionales
                 </li>
                 <li onclick="verDocumento2('https://drive.google.com/file/d/11mosBoPOEpuilTppU1080nmBjFIsKbiP/preview')">
-                    🎓 Título en Provisión Nacional. de “Ingeniero de Sistemas”. 
+                    📜
                 </li>
                 <li onclick="verDocumento2('https://drive.google.com/file/d/1VBi0Dbbks9vv8xjPDqvxRCIQOIb4ViC4/preview')">
-                    🎓 Título en Provisión Nacional como "Licenciado en Matemática" 
+                    📜
                 </li>
                   <li onclick="verDocumento2('https://drive.google.com/file/d/1PDUq0cVES2FfwWo9TSwVQkA81O3Qpxtv/preview')">
-                    🎓 Título de Técnico Medio en Ingles $
+                    📜
                 </li>
             </ul>
          </div>
