--- a/index.html
+++ b/index.html
@@ -171,26 +171,20 @@ footer {
     <div class="certificados-container">
         <div class="lista-certificados">
             <ul>
-                <li onclick="verDocumento2('https://drive.google.com/file/d/1Mis_xDxXNwU7oTXosK9xSSNXpNjEGJaN/preview')">
+                <li onclick="verDocumento2('https://drive.google.com/file/d/1-tINqiTXWZWtOzLzI9va2Q6OejvBkmAt/preview')">
                     📜 Cursos de Capacitación Docente y Matemática
                 </li>
-                <li onclick="verDocumento2('https://drive.google.com/file/d/1j3wINUa-woVRWL1pm7COuJYLNA48RNq9/preview')">
-                    📜 Cursos relacionados con Informatica
+                <li onclick="verDocumento2('https://drive.google.com/file/d/1Bklmg-BMwDkhDVS_s8yURlAxVLxxuRTG/preview')">
+                    📜 Cursos Talleres Nacionales e Internacionales
                 </li>
-                  <li onclick="verDocumento2('https://drive.google.com/file/d/1FKljn8PwOJqxwzY2lLGTWimXt6oz_7SJ/preview')">
-                    📜 Cursos de Capacitación docente
+                  <li onclick="verDocumento2('https://drive.google.com/file/d/1ysrTktwv99R_ckhS44vQLx8gMQvIi2Ev/preview')">
+                    📜 Cursos de Capacitación en Computación e Informatica
                 </li>
-                <li onclick="verDocumento2('https://drive.google.com/file/d/1z49ilkO5PZ4nsZtnSPvywvaSaZCWumrO/preview')">
-                    📜 Talleres Nacionales e Internacionales
+                <li onclick="verDocumento2('https://drive.google.com/file/d/1tcg81Sslyo-M5Gw8C_oJirF-JCzNOhbt/preview')">
+                    📜 Cursos de Educador Digital
                 </li>
-                <li onclick="verDocumento2('https://drive.google.com/file/d/11mosBoPOEpuilTppU1080nmBjFIsKbiP/preview')">
-                    📜
-                </li>
-                <li onclick="verDocumento2('https://drive.google.com/file/d/1VBi0Dbbks9vv8xjPDqvxRCIQOIb4ViC4/preview')">
-                    📜
-                </li>
-                  <li onclick="verDocumento2('https://drive.google.com/file/d/1PDUq0cVES2FfwWo9TSwVQkA81O3Qpxtv/preview')">
-                    📜
+                <li onclick="verDocumento2('https://drive.google.com/file/d/1--3PVaktQqb2cN43xhJGfFqa-3lIMxBQ/preview')">
+                    📜 Otros Cursos de Capacitación
                 </li>
             </ul>
          </div>
