--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ footer {
                     🎓 Diplomado en "Plataformas Virtuales y Herramientas Tecnológicas para Procesos Pedaqgógicos"
                 </li>
                 <li onclick="verDocumento1('https://drive.google.com/file/d/1zl0w9csCcxGhqZefzFp6w8_3Vm4UwGIj/preview')">
-                    📜 Maestría en Matemática
+                    📜 Maestría en Matemática Universidad Pedagógica de Bolivia
                 </li>
             </ul>
          </div>
