--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ footer {
         <li>Docente formador en la Universidad Pedagógica de Bolivia, facilitando diplomados dirigidos a docentes a nivel nacional.</li>
     </ul>
 <!-- Este es un comentario en HTML -->
-    <h2>📄 Títulos y Certificados </h2>  
+    <h2>📄 TÍTULOS Y CERTIFICADOS DE EGRESO</h2>  
     <h4>Para ver dar clic en la lista de abajo 👇</h4>
     <div class="certificados-container">
         <div class="lista-certificados">
@@ -139,7 +139,7 @@ footer {
         </div>
     </div>
     
-<h2>📄 Estudios de Postgrado</h2>  
+<h2>📄 ESTUDIOS DE POSTGRADO</h2>  
     <h4>Para ver dar clic en la lista de abajo  👇</h4>
 
     <div class="certificados-container">
@@ -166,7 +166,7 @@ footer {
 
     </div>
  
- <h2>📄 Títulos y Certificados </h2>  
+ <h2>📄 CURSOS / TALLERES / SEMINARIOS </h2>  
     <h4>Para ver dar clic en la lista de abajo 👇</h4>
     <div class="certificados-container">
         <div class="lista-certificados">
@@ -194,7 +194,26 @@ footer {
         </div>
 
       </div>
+<h2>📄 EXPERIENCIA DE TRABAJO Y RECONOCIMIENTOS</h2>  
+    <h4>Para ver dar clic en la lista de abajo  👇</h4>
 
+    <div class="certificados-container">
+        <div class="lista-certificados">
+            <ul>
+                    <li onclick="verDocumento3('https://drive.google.com/file/d/1qu4OfEJs82W7291Wb7vHGYVguDwZ7Coo/preview')">
+                    📜 Experiencia de Trabajo
+                    </li>
+                    <li onclick="verDocumento3('https://drive.google.com/file/d/1zl0w9csCcxGhqZefzFp6w8_3Vm4UwGIj/preview')">
+                    📜 Reconocimientos
+                    </li>
+            </ul>
+         </div>
+
+        <div class="vista-certificado">
+            <iframe id="visor3" src=""></iframe>
+        </div>
+
+    </div>
 <!-- Este es un comentario en HTML -->
     
     <footer>
@@ -215,12 +234,6 @@ function verDocumento2(url) {
 }
 function verDocumento3(url) {
     document.getElementById("visor3").src = url;
-}
-function verDocumento4(url) {
-    document.getElementById("visor4").src = url;
-}
-function verDocumento5(url) {
-    document.getElementById("visor5").src = url;
 }
 </script>
 
