--- a/index.html
+++ b/index.html
@@ -200,8 +200,14 @@ footer {
     <div class="certificados-container">
         <div class="lista-certificados">
             <ul>
-                    <li onclick="verDocumento3('https://drive.google.com/file/d/1qu4OfEJs82W7291Wb7vHGYVguDwZ7Coo/preview')">
-                    📜 Experiencia de Trabajo
+                    <li onclick="verDocumento3('https://drive.google.com/file/d/1WcRKTPwzRZ83Et81n4OejYCoBI8Tt67c/preview')">
+                    📜 Experiencia Como Maestro de Matemática - Computación
+                    </li>
+                    <li onclick="verDocumento3('https://drive.google.com/file/d/1kmNjolINRBmWg8nVV57fBBBi2y1KJca0/preview')">
+                    📜 Experiencia de Trabajo Como Docente de Universidades e Institutos
+                    </li>
+                    <li onclick="verDocumento3('https://drive.google.com/file/d/1O9QB9YYFqhnkbc_2B2XMBZcfH91k_Fmi/preview')">
+                    📜 Experiencia de Trabajos Variados
                     </li>
                     <li onclick="verDocumento3('https://drive.google.com/file/d/1qu4OfEJs82W7291Wb7vHGYVguDwZ7Coo/preview')">
                     📜 Reconocimientos
