--- a/index.html
+++ b/index.html
@@ -154,9 +154,6 @@ footer {
                 <li onclick="verDocumento1('https://drive.google.com/file/d/1FpuizjI-W9IgaBwGX5uzwra_s6m4xAp3/preview')">
                     🎓 Diplomado en "Plataformas Virtuales y Herramientas Tecnológicas para Procesos Pedaqgógicos"
                 </li>
-                <li onclick="verDocumento1('https://drive.google.com/file/d/1zl0w9csCcxGhqZefzFp6w8_3Vm4UwGIj/preview')">
-                    📜 Maestría en Matemática Universidad Pedagógica de Bolivia
-                </li>
             </ul>
          </div>
 
@@ -172,19 +169,19 @@ footer {
         <div class="lista-certificados">
             <ul>
                 <li onclick="verDocumento2('https://drive.google.com/file/d/1-tINqiTXWZWtOzLzI9va2Q6OejvBkmAt/preview')">
-                    📜 Cursos de Capacitación Docente y Matemática
+                    📜 Cursos de Capacitación Docente y Matemática (15 Certificados)
                 </li>
                 <li onclick="verDocumento2('https://drive.google.com/file/d/1Bklmg-BMwDkhDVS_s8yURlAxVLxxuRTG/preview')">
-                    📜 Cursos Talleres Nacionales e Internacionales
+                    📜 Cursos Talleres Nacionales e Internacionales (7 Certificados)
                 </li>
                   <li onclick="verDocumento2('https://drive.google.com/file/d/1ysrTktwv99R_ckhS44vQLx8gMQvIi2Ev/preview')">
-                    📜 Cursos de Capacitación en Computación e Informatica
+                    📜 Cursos de Capacitación en Computación e Informatica (12 Certificados)
                 </li>
                 <li onclick="verDocumento2('https://drive.google.com/file/d/1tcg81Sslyo-M5Gw8C_oJirF-JCzNOhbt/preview')">
-                    📜 Cursos de Educador Digital
+                    📜 Cursos de Educador Digital (9 Certificados)
                 </li>
                 <li onclick="verDocumento2('https://drive.google.com/file/d/1--3PVaktQqb2cN43xhJGfFqa-3lIMxBQ/preview')">
-                    📜 Otros Cursos de Capacitación
+                    📜 Otros Cursos de Capacitación (6 Certificados)
                 </li>
             </ul>
          </div>
@@ -201,16 +198,16 @@ footer {
         <div class="lista-certificados">
             <ul>
                     <li onclick="verDocumento3('https://drive.google.com/file/d/1WcRKTPwzRZ83Et81n4OejYCoBI8Tt67c/preview')">
-                    📜 Experiencia Como Maestro de Matemática - Computación
+                    📜 Experiencia Como Maestro de Matemática - Computación (11 Certificados)
                     </li>
                     <li onclick="verDocumento3('https://drive.google.com/file/d/1kmNjolINRBmWg8nVV57fBBBi2y1KJca0/preview')">
-                    📜 Experiencia de Trabajo Como Docente de Universidades e Institutos
+                    📜 Experiencia de Trabajo Como Docente de Universidades e Institutos (9 Certificados)
                     </li>
                     <li onclick="verDocumento3('https://drive.google.com/file/d/1O9QB9YYFqhnkbc_2B2XMBZcfH91k_Fmi/preview')">
-                    📜 Experiencia de Trabajos Variados
+                    📜 Experiencia de Trabajos Variados (5 Certificados)
                     </li>
                     <li onclick="verDocumento3('https://drive.google.com/file/d/1qu4OfEJs82W7291Wb7vHGYVguDwZ7Coo/preview')">
-                    📜 Reconocimientos
+                    📜 Reconocimientos (18 Entre Certificados y Diplomas)
                     </li>
             </ul>
          </div>
