--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ footer {
                     📜 Experiencia de Trabajos Variados (5 Certificados)
                     </li>
                     <li onclick="verDocumento3('https://drive.google.com/file/d/1qu4OfEJs82W7291Wb7vHGYVguDwZ7Coo/preview')">
-                    📜 Reconocimientos (18 Entre Certificados y Diplomas)
+                    📜 Reconocimientos (18 Certificados y Diplomas)
                     </li>
             </ul>
          </div>
