--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ footer {
     </ul>
 <!-- Este es un comentario en HTML -->
     <h2>📄 TÍTULOS Y CERTIFICADOS DE EGRESO</h2>  
-    <h4>Para ver dar clic en la lista de abajo 👇</h4>
+    <h4>Para ver, dar clic en la lista de abajo 👇</h4>
     <div class="certificados-container">
         <div class="lista-certificados">
             <ul>
@@ -140,7 +140,7 @@ footer {
     </div>
     
 <h2>📄 ESTUDIOS DE POSTGRADO</h2>  
-    <h4>Para ver dar clic en la lista de abajo  👇</h4>
+    <h4>Para ver, dar clic en la lista de abajo  👇</h4>
 
     <div class="certificados-container">
         <div class="lista-certificados">
@@ -164,7 +164,7 @@ footer {
     </div>
  
  <h2>📄 CURSOS / TALLERES / SEMINARIOS </h2>  
-    <h4>Para ver dar clic en la lista de abajo 👇</h4>
+    <h4>Para ver, dar clic en la lista de abajo 👇</h4>
     <div class="certificados-container">
         <div class="lista-certificados">
             <ul>
@@ -192,7 +192,7 @@ footer {
 
       </div>
 <h2>📄 EXPERIENCIA DE TRABAJO Y RECONOCIMIENTOS</h2>  
-    <h4>Para ver dar clic en la lista de abajo  👇</h4>
+    <h4>Para ver, dar clic en la lista de abajo  👇</h4>
 
     <div class="certificados-container">
         <div class="lista-certificados">
