--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ footer {
     </ul>
 <!-- Este es un comentario en HTML -->
  <h2>📄 DOCUMENTOS PERSONALES </h2>  
-    <h4>Para ver, dar clic en la lista de abajo 👇</h4>
+    <h4>👇 Para ver, dar clic en la lista de abajo </h4>
     <div class="certificados-container">
         <div class="lista-certificados">
             <ul>
@@ -128,7 +128,7 @@ footer {
       </div>
     
     <h2>📄 TÍTULOS Y CERTIFICADOS DE EGRESO</h2>  
-    <h4>Para ver, dar clic en la lista de abajo 👇</h4>
+    <h4>👇 Para ver, dar clic en la lista de abajo</h4>
     <div class="certificados-container">
         <div class="lista-certificados">
             <ul>
@@ -162,7 +162,7 @@ footer {
     </div>
     
 <h2>📄 ESTUDIOS DE POSTGRADO</h2>  
-    <h4>Para ver, dar clic en la lista de abajo  👇</h4>
+    <h4>👇 Para ver, dar clic en la lista de abajo</h4>
 
     <div class="certificados-container">
         <div class="lista-certificados">
@@ -186,7 +186,7 @@ footer {
     </div>
  
  <h2>📄 CURSOS / TALLERES / SEMINARIOS </h2>  
-    <h4>Para ver, dar clic en la lista de abajo 👇</h4>
+    <h4>👇 Para ver, dar clic en la lista de abajo</h4>
     <div class="certificados-container">
         <div class="lista-certificados">
             <ul>
@@ -214,7 +214,7 @@ footer {
 
       </div>
 <h2>📄 EXPERIENCIA DE TRABAJO Y RECONOCIMIENTOS</h2>  
-    <h4>Para ver, dar clic en la lista de abajo  👇</h4>
+    <h4>👇 Para ver, dar clic en la lista de abajo</h4>
 
     <div class="certificados-container">
         <div class="lista-certificados">
